--- a/src/components/Panel/Panel.module.css
+++ b/src/components/Panel/Panel.module.css
@@ -1,5 +1,5 @@
 .panel{
-    @apply bg-inherit  blur-3xl  w-64 h-[calc(100vh-80px)] rounded-3xl border-solid border-2 shadow-2xl border-white
+    @apply bg-inherit  blur-3xl  w-64 h-[calc(100vh-80px)] rounded-3xl border-solid border-2 shadow-2xl border-white ml-8
 }
 .panel h2{
     @apply w-fit mx-auto text-2xl font-bold  text-yellow-600 m-5
