--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -1,5 +1,5 @@
 .container {
-	/* animation: bounce 2s 1 ; */
+	animation: bounce 2s 1 ;
 	@apply bg-inherit m-5 bg-blend-multiply  min-h-[calc(100vh-80px)] rounded-3xl  flex  justify-between  shadow-2xl bg-no-repeat bg-cover;
 }
 @keyframes bounce {
